# sfim_lib

./: .gitignore  README.md  pyproject.toml
src/sfim_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sfim_lib/atlases/: raking.py
src/sfim_lib/cpm/: cpm.py  cpm_warper.py  plotting.py
src/sfim_lib/fc_introspection/: initialize_variables.py
src/sfim_lib/plotting/: fc_matrices.py
