[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "sfim_lib"
version = "0.0.2"
authors = [
  { name="Javier Gonzalez-Castillo", email="javiergc@mail.nih.gov" },
  { name="Daniel Handwerker", email="handwerkerd@mail.nih.gov" },
]
description = "SFIM Python Library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nimh-sfim/sfim_lib"
"Bug Tracker" = "https://github.com/nimh-sfim/sfim_lib/issues"
