[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "sfim_lib"
version = "0.0.12"
authors = [
  { name="Javier Gonzalez-Castillo", email="javiergc@mail.nih.gov" },
  { name="Daniel Handwerker", email="handwerkerd@mail.nih.gov" },
  { name="Catherine Walsh", email="catherine.walsh@nih.gov"},
]
description = "SFIM Python Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nimh-sfim/sfim_lib"
"Bug Tracker" = "https://github.com/nimh-sfim/sfim_lib/issues"
